--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             </div>
             <button class="w-[100px] h-[35px] hover:opacity-3 font-[500] bg-blue-400 text-white rounded-md">Free trial</button>
         </nav>
-    </header><br><br><br><br>
+    </header><br><br><br><br> 
 
     <!-- --------Home---------- -->
 
@@ -62,21 +62,21 @@
 
     <div class="Details md:flex md:mt-20 md:gap-4 lg:pt-24 lg:h-[500px] px-6 md:px-12 lg:px-48 justify-center md:h-[400px] mt-[-30px] pt-8 md:mt-[-35px] lg:h-[400px] md:pt-[40px] lg:pt-20">
         <div class="text-center border-2 pt-4 lg:pt-8 lg:px-6 shadow-xl h-48 md:h-[230px] mt-10">
-            <img class="w-12 h-12 lg:ml-[140px] lg:mb-2 lg:w-16 lg:h-16 bg-blue-500 md:ml-20 text-white p-2" src="/images/space-rocket-launch.png" alt="">
+            <img class="w-12 h-12 ml-16 lg:ml-[140px] lg:mb-2 lg:w-16 lg:h-16 bg-blue-500 md:ml-20 text-white p-2" src="/images/space-rocket-launch.png" alt="">
             <h4 class="font-[700]">Porta Non Pulvinar</h4>
             <p class="font-[400]">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Obcaecati omnis quia vitae libero.</p>
         </div>
         <div class="text-center border-2 pt-4 lg:pt-8 lg:px-6  md:h-[230px] shadow-xl h-48 mt-10">
-            <img class="w-12 h-12 lg:ml-[140px] lg:mb-2 lg:w-16 lg:h-16 bg-blue-500 md:ml-20 text-white p-2" src="/images/clock.png" alt="">
+            <img class="w-12 h-12 ml-16 lg:ml-[140px] lg:mb-2 lg:w-16 lg:h-16 bg-blue-500 md:ml-20 text-white p-2" src="/images/clock.png" alt="">
             <h4 class="font-[700]">Vel Orci Portal Non</h4>
             <p class="font-[400]">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Obcaecati omnis quia vitae libero.</p>
         </div>
         <div class="text-center border-2 pt-4 lg:pt-8 lg:px-6 md:h-[230px] shadow-xl h-48 mt-10">
-            <img class="w-12 h-12 lg:ml-[140px] lg:mb-2 lg:w-16 lg:h-16 bg-blue-500 md:ml-20 text-white p-2" src="/images/bubble-chat.png" alt="">
+            <img class="w-12 h-12 ml-16 lg:ml-[140px] lg:mb-2 lg:w-16 lg:h-16 bg-blue-500 md:ml-20 text-white p-2" src="/images/bubble-chat.png" alt="">
             <h4 class="font-[700]">Udin Nibh Sit Amet </h4>
             <p class="font-[400]">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Obcaecati omnis quia vitae libero.</p>
         </div>
-    </div>
+    </div><br class="block md:hidden"><br class="block md:hidden">
 
 
     <!-- ----------Drops--------- -->
